--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,13 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <h1 id="heading">Millionaire Suitcase Game</h1>
+      <br>
+      <div id="score"></div>
+      
+      
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
